--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Header Section -->
   <header class="header">
     <nav class="nav">
-      <a href="index.html"><img src="images/POST CAFE LOGO.png" alt="Post Café Logo"></a>
+      <a href="index.html"><img src="POST CAFE LOGO.png" alt="Post Café Logo"></a>
       <div class="nav-links"> 
         <ul>
           <li><a href="index.html">HOME</a></li>
@@ -113,4 +113,5 @@
     </div>
   </footer>
 </body>
+
 </html>
