--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 <body>
 
   <nav>
-    <a href="index.html"><img src="images/POST CAFE LOGO.png" alt="Post Café Logo"></a>
+    <a href="index.html"><img src="POST CAFE LOGO.png" alt="Post Café Logo"></a>
     <div class="nav-links"> 
       <ul>
         <li><a href="index.html">HOME</a></li>
@@ -25,7 +25,7 @@
 
     <section class="menu-selection">
       <div class="menu-latte">
-        <img src="images/latte.jpg" alt="Coffee">
+        <img src="latte.jpg" alt="Coffee">
       </div>
       <div class="menu-content">
         <h3>COFFEE</h3>
@@ -48,7 +48,7 @@
 
     <section class="menu-selection">
       <div class="menu-tea">
-        <img src="images/matcha.jpg" alt="Teas">
+        <img src="matcha.jpg" alt="Teas">
       </div>
       <div class="menu-content">
         <h3>TEAS AND OTHER DRINKS</h3>
@@ -68,7 +68,7 @@
 
     <section class="menu-selection">
       <div class="menu-dessert">
-        <img src="images/ube.jpg" alt="Desserts">
+        <img src="ube.jpg" alt="Desserts">
       </div>
       <div class="menu-content">
         <h3>DESSERTS</h3>
@@ -116,11 +116,12 @@
     <div class="copyright"> 
       <div class="f-logo"> 
       </div>
-      <img src="images/POST CAFE LOGO.png" alt="Logo" class="footer-logo">
+      <img src="POST CAFE LOGO.png" alt="Logo" class="footer-logo">
 
       <p> Copyright ©2025 All Rights Reserved | This website is made by Love and Andrei</p>
     </div>
   </footer>
 
 </body>
+
 </html>
