--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
 
   <header>
     <nav class="nav">
-      <a href="index.html"><img src="images/POST CAFE LOGO.png" alt="Post Café Logo" /></a>
+      <a href="index.html"><img src="POST CAFE LOGO.png" alt="Post Café Logo" /></a>
       <div class="nav-links">
         <ul>
           <li><a href="index.html">HOME</a></li>
@@ -27,26 +27,26 @@
   <section class="upcoming-events">
     <h2 class="section-title">UPCOMING EVENTS AT POST CAFE</h2>
     <div class="long-pic">
-      <img src="images/long.jpg" alt="Banner" class="banner-img" />
+      <img src="long.jpg" alt="Banner" class="banner-img" />
     </div>
   </section>
 
   <div class="event-cards-wrapper">
     <div class="event-cards-row">
       <div class="event-card">
-        <img src="images/guitar.jpg" alt="Event 1" />
+        <img src="guitar.jpg" alt="Event 1" />
         <h4>BUSKING BIYERNES 🎵</h4>
         <small>Spend your friday night with music and art! With a wide variety of song genre to be performed.</small>
       </div>
 
       <div class="event-card">
-        <img src="images/mugs.jpg" alt="Event 2" />
+        <img src="mugs.jpg" alt="Event 2" />
         <h4>SIMBANG GABI SPECIALS 🎄</h4>
         <small>Come and join us as we unveil our latest Paskuhan inspired drinks and pastries.</small>
       </div>
 
       <div class="event-card">
-        <img src="images/silhouette.jpg" alt="Event 3" />
+        <img src="silhouette.jpg" alt="Event 3" />
         <h4>SUNNY SUNDAY ☀️</h4>
         <small>Join us for a sunday photowalk around Manila. where photographers of all formats may join.</small>
       </div>
@@ -54,13 +54,13 @@
 
     <div class="event-cards-row">
       <div class="event-card">
-        <img src="images/disco.jpg" alt="Event 4" />
+        <img src="disco.jpg" alt="Event 4" />
         <h4>DISCO OTSO  🪩</h4>
         <small>Move with the groove when it hits exactly 8 PM. Join Disco Otso and show your exciting moves.</small>
       </div>
 
       <div class="event-card">
-        <img src="images/letters.jpg" alt="Event 5" />
+        <img src="letters.jpg" alt="Event 5" />
         <h4>SULAT SALAMAT 🖌️</h4>
         <small>Express your gratitude to you loved ones through this “Sulat Salamat” event by Post Cafe.</small>
       </div>
@@ -78,9 +78,10 @@
 
     <div class="copyright">
       <div class="f-logo"></div>
-      <img src="images/POST CAFE LOGO.png" alt="Logo" class="footer-logo" />
+      <img src="POST CAFE LOGO.png" alt="Logo" class="footer-logo" />
       <p> Copyright ©2025 All Rights Reserved | This website is made by Love and Andrei</p>
     </div>
   </footer>
 </body>
 </html>
+
